--- a/src/main/resources/assets/zero_quest/lang/en_US.lang
+++ b/src/main/resources/assets/zero_quest/lang/en_US.lang
@@ -259,29 +259,29 @@ zero_quest.nileGrenade.name=Nile Grenade
 zero_quest.Iceball.name=Iceball
 zero_quest.ZertumBeam.name=Zertum Beam
 
-achievement.NileStart=Start Zero Quest!
-achievement.NileStart.desc=Gather nile grains, dust, or essence
-achievement.TraveltoNillax=Another Overworld?
-achievement.TraveltoNillax.desc=Build a portal to the Nillax dimension
-achievement.ZertKill=Death to the Savages!
-achievement.ZertKill.desc=Kill a Zertum
+achievement.nileStart=§3Start Zero Quest!
+achievement.nileStart.desc=Gather nile grains, dust, or essence
+achievement.travelToNillax=§9Another Overworld?
+achievement.travelToNillax.desc=Build a portal to the Nillax dimension
+achievement.zertumKill=§4Death to the Savages!
+achievement.zertumKill.desc=Kill a Zertum
 achievement.buildNileSword=Nile Combat
 achievement.buildNileSword.desc=Craft a Nile Sword
 achievement.buildNWorkBench=Nile Crafting
 achievement.buildNWorkBench.desc=Craft a Nile Crafting Table
-achievement.buildBone=Nile Taming
-achievement.buildBone.desc=Craft a Nile Bone for Taming
-achievement.ZertTame=Zertum, My Pet!
-achievement.ZertTame.desc=Tame a Zertum
-achievement.MountUp= Mount up, Ladies!
-achievement.MountUp.desc=Mount on a Jakan
+achievement.buildNileBone=Nile Taming
+achievement.buildNileBone.desc=Craft a Nile Bone for Taming
+achievement.zertumTame=Zertum, My Pet!
+achievement.zertumTame.desc=Tame a 'nile' Zertum
+achievement.mountUp=Mount up, Ladies!
+achievement.mountUp.desc=Mount on a Jakan or Kortor
 
-achievement.TraveltoDarkax=Flipped Dimensions
-achievement.TraveltoDarkax.desc=Build a portal to the Darkax dimension
-achievement.DragonSlayer=The Dragon Slayer
-achievement.DragonSlayer.desc=Slay a Kurr
-achievement.DarkStart=Start Dark Quest!
-achievement.DarkStart.desc=Gather dark grains, dust, or essence
+achievement.darkStart=§5Start Dark Quest!
+achievement.darkStart.desc=Gather dark grains, dust, or essence
+achievement.travelToDarkax=§dFlipped Dimensions
+achievement.travelToDarkax.desc=Build a portal to the Darkax dimension
+achievement.dragonSlayer=§4The Dragon Slayer
+achievement.dragonSlayer.desc=Slay a Kurr
 
 achievementpage.ZeroQuestPage=Zero Quest
 achievementpage.DarkQuestPage=Dark Quest
