--- a/src/main/resources/assets/zero_quest/lang/en_US.lang
+++ b/src/main/resources/assets/zero_quest/lang/en_US.lang
@@ -196,6 +196,12 @@ item.zertumMeatRaw.name=Raw Zertum Meat
 item.zertumMeatCooked.name=Cooked Zertum Meat
 item.jakanMeatRaw.name=Raw Jakan Meat
 item.jakanMeatCooked.name=Cooked Jakan Meat
+item.kortorMeatRaw.name=Raw Kortor Meat
+item.kortorMeatCooked.name=Cooked Kortor Meat
+item.riggatorMeatRaw.name=Raw Riggator Meat
+item.riggatorMeatCooked.name=Cooked Riggator Meat
+item.kurrMeatRaw.name=Raw Kurr Meat
+item.kurrMeatCooked.name=Cooked Kurr Meat
 item.vitoidSeed.name=Vitoid Seed
 item.vitoidFruit.name=Vitoid Fruit
 item.kurrSeeds.name=Kurr Seeds
@@ -271,10 +277,16 @@ achievement.buildNWorkBench=Nile Crafting
 achievement.buildNWorkBench.desc=Craft a Nile Crafting Table
 achievement.buildNileBone=Nile Taming
 achievement.buildNileBone.desc=Craft a Nile Bone for Taming
+achievement.skinningRiggator=Skinning Riggator!
+achievement.skinningRiggator.desc=Kill a Riggator
 achievement.zertumTame=Zertum, My Pet!
 achievement.zertumTame.desc=Tame a 'nile' Zertum
 achievement.mountUp=Mount up, Ladies!
 achievement.mountUp.desc=Mount on a Jakan or Kortor
+achievement.alphaLevelUp=§cAlpha Zertum
+achievement.alphaLevelUp.desc=Your pet Zertum must reach level 120
+achievement.deltaLevelUp=§bDelta Zertum
+achievement.deltaLevelUp.desc=Your pet Zertum must reach the maximum level
 
 achievement.darkStart=§5Start Dark Quest!
 achievement.darkStart.desc=Gather dark grains, dust, or essence
@@ -282,6 +294,12 @@ achievement.travelToDarkax=§dFlipped Dimensions
 achievement.travelToDarkax.desc=Build a portal to the Darkax dimension
 achievement.dragonSlayer=§4The Dragon Slayer
 achievement.dragonSlayer.desc=Slay a Kurr
+achievement.buildDarkSword=Corrupted Combat
+achievement.buildDarkSword.desc=Craft a Dark Sword
+achievement.buildDarkBone=Corrupted Taming
+achievement.buildDarkBone.desc=Craft a Dark Bone for Taming
+achievement.darkZertumTame=Corrupted Zertum, the beast!
+achievement.darkZertumTame.desc=Tame a Dark Zertum
 
 achievementpage.ZeroQuestPage=Zero Quest
 achievementpage.DarkQuestPage=Dark Quest
